Switch to using FT FastClick for eliminating touch delay

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <!-- Add your site or application content here -->
 
         <script src="js/vendor/jquery-2.0.3.min.js"></script>
+        <script src="js/vendor/fastclick.js"></script>
         <script src="js/helper.js"></script>
         <script src="js/main.js"></script>
 
